# tldr-research

./: .gitignore  .gitmodules  LICENSE  README.md
chain-listener/: .gitignore  Cargo.toml  README.md
chain-listener/src/: main.rs
interaction-servers-rust/: .gitignore  .sample_env  Cargo.toml  README.md  rustfmt.toml
interaction-servers-rust/crates/auction-block-server/: Cargo.toml
interaction-servers-rust/crates/auction-block-server/src/: lib.rs  main.rs
interaction-servers-rust/crates/auction-cli-server/: Cargo.toml
interaction-servers-rust/crates/auction-cli-server/src/: main.rs
interaction-servers-rust/crates/auction-cli-server/src/cli/: amm_auction.rs
interaction-servers-rust/crates/auction-cli-server/src/commands/: amm_auction.rs  mod.rs
interaction-servers-rust/crates/auction-interface/: Cargo.toml
interaction-servers-rust/crates/block-server/: Cargo.toml
interaction-servers-rust/crates/block-server/src/: lib.rs
interaction-servers-rust/crates/poc-first-swap-auction/: Cargo.toml  README.md
interaction-servers-rust/crates/poc-first-swap-auction/src/: main.rs
interaction-servers-rust/crates/suave-rust/: Cargo.toml
interaction-servers-rust/crates/suave-rust/src/: amm_auction_config.rs  amm_auction_suapp.rs  ccr.rs  lib.rs
poc_first_swap_auction/: README.md
poc_first_swap_auction/script/: BlockBuilding.s.sol  Deployments.s.sol  Interactions.s.sol  Storage.s.sol  TestingBase.s.sol  UniswapBase.s.sol
poc_first_swap_auction/script/utils/: CCRForgeUtil.sol  EIP712Helpers.sol
poc_first_swap_auction/src/: AMMAuctionSuapp.sol  AuctionDeposits.sol  AuctionGate.sol  AuctionGuard.sol  IAuctionDeposits.sol  IAuctionGuard.sol  IUniswapV3PoolAuctionedFirstSwap.sol  UniswapV3PoolAuctionedFirstSwap.sol  UniswapV3PoolModified.sol
poc_first_swap_auction/src/interfaces/: IAMMAuctionSuapp.sol
poc_first_swap_auction/src/modified_uniswap_casing/v3-core-modified/: UniswapV3FactoryModified.sol  UniswapV3PoolDeployerModified.sol
poc_first_swap_auction/src/modified_uniswap_casing/v3-periphery-modified/: INonfungiblePositionManagerModified.sol
poc_first_swap_auction/src/uniswap_modifications/: IUniswapV3PoolAuctionedFirstSwap.sol  UniswapV3PoolAuctionedFirstSwap.sol
poc_first_swap_auction/src/utils/: Bundle.sol  SuappSequencedBase.sol
poc_first_swap_auction/test/: UniV3AuctionedFirstSwap.t.sol  UniV3PoolExplorer.t.sol  UniswapV3AuctionedFirstSwap.t.sol
poc_first_swap_auction/test/modified_uniswap/: importHelper.sol
poc_first_swap_auction/test/modified_uniswap/v3-periphery-modified/: ISwapRouterModified.sol  NonfungiblePositionManagerModified.sol  SwapRouterModified.sol
poc_first_swap_auction/test/utils/: UniV3GenericTestSetup.t.sol
poc_only_sequenceable_by_suave/: .gitignore  README.md  foundry.toml  sample.env
poc_only_sequenceable_by_suave/broadcast/Interactions.s.sol/16813125/: deploySuavePokeRelayer-latest.json  run-1706540096.json  run-1706540102.json  run-1706540873.json
poc_only_sequenceable_by_suave/script/: Interactions.s.sol
poc_only_sequenceable_by_suave/script/utils/: CCRForgeUtil.sol
poc_only_sequenceable_by_suave/src/: GoerliChainInfo.sol  PokeRelayer.sol  Poked.sol
poc_only_sequenceable_by_suave/src/utils/: ConfidentialControl.sol
poc_only_sequenceable_by_suave/test/: Poked.t.sol
poc_only_suave/: README.md
poc_only_suave/goerli-smart-contracts/lib/openzeppelin-contracts/: CHANGELOG.md
poc_only_suave/goerli-smart-contracts/src/: ChainInfo.sol  OnlySUAPP.sol  OnlySUAPPCounter.sol
poc_only_suave/goerli-smart-contracts/test/: OFAPrivate.t.sol  OnlySUAPPCounter.t.sol
poc_only_suave/goerli-smart-contracts/test/utils/: EIP712Helpers.sol
poc_only_suave/suave-contracts/: foundry.toml  sample.env
poc_only_suave/suave-contracts/cache/: solidity-files-cache.json
poc_only_suave/suave-contracts/configs/: foundry.toml
poc_only_suave/suave-contracts/script/utils/: CCRForgeUtil.sol  RLPEncoder.sol
poc_only_suave/suave-contracts/src/: SuaveSigner.sol
poc_only_suave/suave-contracts/test/: RLP.t.sol  SuaveSigner.t.sol
poc_v3_twap_auction_unsafe/cache/: solidity-files-cache.json
poc_v3_twap_auction_unsafe/test/: UniV3TwapNotSafe.sol
rust_interactions/: .gitignore  Cargo.toml  README.md
rust_interactions/crates/auction-block-listener/: Cargo.toml
rust_interactions/crates/auction-block-listener/src/: lib.rs  main.rs
rust_interactions/crates/auction-cli/: Cargo.toml
solidity_code/: .sample_env  README.md  foundry.toml  sample.env
solidity_code/script/: Deployments.s.sol  TestingBase.s.sol  UniswapBase.s.sol
solidity_code/src/: AMMAuctionSuapp.sol  AuctionDeposits.sol  AuctionGuard.sol  AuctionSuapp.sol  UniswapV3FactoryAuctioned.sol  UniswapV3PoolAuctioned.sol  UniswapV3PoolDeployerAuctioned.sol
solidity_code/src/interfaces/: IAuctionDeposits.sol  IAuctionGuard.sol  IAuctionSuapp.sol  IUniswapV3FactoryAuctioned.sol  IUniswapV3PoolAuctioned.sol  IUniswapV3PoolDeployerAuctioned.sol
solidity_code/src/utils/: Bundle.sol  ERC20Mintable.sol  UniswapCoreDeploymentHelper.sol  UniswapPeripheyDeploymentHelper.sol
solidity_code/test/: UniswapV3Auctioned.t.sol
solidity_code/test/utils/: UniV3GenericTestSetup.t.sol
uni_v3_pool_setup/: .gitignore
uni_v3_pool_setup/cache/: solidity-files-cache.json
(+34 files in other folders)
