[package]
name = "auction-block-server"
version = "0.0.1"
edition = "2021"

[features]
default = []
local = []

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.17", features = ["native-tls"] }
futures-util = "0.3"
url = "2.2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"